Fix the info width too narrow

--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body, h1, h2 {
 
 #head .info {
   height : 350px;
-  width : 830px;
+  width : 900px;
 }
 
 #head .info .sub {
